--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <meta property="og:url" content="" />
      <meta property="og:title" content="sofia sanchez sex " />
      <meta property="og:description" content="video sofia " />
-     <meta property="og:image" content="https://www.top4top.me/do.php?imgf=top4top_meec104f574b221.jpg" />
+     <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRMo1wdLwsPskQ7_YBToCn8sZ8Qq2XHEiu9A&usqp=CAU" />
      
      <!-- Twitter -->
      <meta property="twitter:card" content="summary_large_image" />
